@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-09T16:19:55Z",
+  "timestamp" : "2022-06-10T08:18:25Z",
   "count_outdated" : 324,
   "uniques_outdated" : 181,
-  "count" : 348,
-  "uniques" : 199,
+  "count" : 349,
+  "uniques" : 200,
   "clones" : [
     {
       "timestamp": "2022-05-28T00:00:00Z",
@@ -91,6 +91,13 @@
     },
     {
       "timestamp": "2022-06-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
